'use server'

import { getPayload } from 'payload'
import config from '@payload-config'
import { auth } from '@/lib/auth'
import { headers } from 'next/headers'
import { revalidatePath } from 'next/cache'

// NOTE: gRPC client removed for now - @connectrpc/connect-node breaks Next.js webpack bundling
// Kafka operations will use mock implementations until we implement HTTP REST endpoints
// or resolve the bundling issues

// ============================================================================
// Types
// ============================================================================

export interface KafkaTopic {
  id: string
  workspaceId: string
  name: string
  environment: string
  clusterId?: string
  partitions: number
  replicationFactor: number
  retentionMs: number
  cleanupPolicy: string
  compression: string
  config: Record<string, string>
  status: 'pending_approval' | 'provisioning' | 'active' | 'failed' | 'deleting'
  workflowId?: string
  approvalRequired: boolean
  approvedBy?: string
  approvedAt?: string
  createdAt: string
  updatedAt: string
  description?: string
}

export interface KafkaSchema {
  id: string
  workspaceId: string
  topicId: string
  type: 'key' | 'value'
  subject: string
  format: 'avro' | 'protobuf' | 'json'
  content: string
  version: number
  schemaId: number
  compatibility: 'backward' | 'forward' | 'full' | 'none'
  status: string
  createdAt: string
  updatedAt: string
}

export interface KafkaTopicShare {
  id: string
  topicId: string
  sharedWithType: 'workspace' | 'user'
  sharedWithWorkspaceId?: string
  sharedWithUserId?: string
  permission: 'read' | 'write' | 'read_write'
  status: 'pending_request' | 'approved' | 'rejected' | 'revoked'
  requestedBy: string
  requestedAt: string
  justification: string
  approvedBy?: string
  approvedAt?: string
  expiresAt?: string
}

export interface DiscoverableTopic {
  topic: KafkaTopic
  owningWorkspaceName: string
  visibility: 'private' | 'discoverable' | 'public'
  accessStatus: string
  hasSchema: boolean
}

// ============================================================================
// Topic Management Actions
// ============================================================================

export interface CreateTopicInput {
  workspaceId: string
  name: string
  environment: string
  partitions?: number
  replicationFactor?: number
  retentionMs?: number
  cleanupPolicy?: string
  compression?: string
  config?: Record<string, string>
  description?: string
}

export interface CreateTopicResult {
  success: boolean
  topic?: KafkaTopic
  workflowId?: string
  error?: string
}

/**
 * Create a new Kafka topic
 */
export async function createTopic(input: CreateTopicInput): Promise<CreateTopicResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  const payload = await getPayload({ config })

  // Check workspace membership
  const membership = await payload.find({
    collection: 'workspace-members',
    where: {
      and: [
        { workspace: { equals: input.workspaceId } },
        { user: { equals: session.user.id } },
        { status: { equals: 'active' } },
      ],
    },
    limit: 1,
  })

  if (membership.docs.length === 0) {
    return { success: false, error: 'Not a member of this workspace' }
  }

  // TODO: Call actual gRPC service when available
  // For now, return a mock response
  const mockTopic: KafkaTopic = {
    id: `topic-${Date.now()}`,
    workspaceId: input.workspaceId,
    name: input.name,
    environment: input.environment,
    partitions: input.partitions || 3,
    replicationFactor: input.replicationFactor || 3,
    retentionMs: input.retentionMs || 604800000, // 7 days
    cleanupPolicy: input.cleanupPolicy || 'delete',
    compression: input.compression || 'none',
    config: input.config || {},
    status: 'pending_approval',
    approvalRequired: true,
    description: input.description,
    createdAt: new Date().toISOString(),
    updatedAt: new Date().toISOString(),
  }

  const workflowId = `wf-topic-${Date.now()}`

  revalidatePath(`/workspaces/[slug]/kafka/topics`)

  return {
    success: true,
    topic: mockTopic,
    workflowId,
  }
}

export interface ListTopicsInput {
  workspaceId: string
  environment?: string
  status?: string
  limit?: number
  offset?: number
}

export interface ListTopicsResult {
  success: boolean
  topics?: KafkaTopic[]
  total?: number
  error?: string
}

/**
 * List Kafka topics for a workspace
 */
export async function listTopics(input: ListTopicsInput): Promise<ListTopicsResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  const payload = await getPayload({ config })

  // Check workspace membership
  const membership = await payload.find({
    collection: 'workspace-members',
    where: {
      and: [
        { workspace: { equals: input.workspaceId } },
        { user: { equals: session.user.id } },
        { status: { equals: 'active' } },
      ],
    },
    limit: 1,
  })

  if (membership.docs.length === 0) {
    return { success: false, error: 'Not a member of this workspace' }
  }

  // TODO: Call actual gRPC service when available
  // For now, return empty list
  return {
    success: true,
    topics: [],
    total: 0,
  }
}

export interface GetTopicResult {
  success: boolean
  topic?: KafkaTopic
  error?: string
}

/**
 * Get a single Kafka topic by ID
 */
export async function getTopic(topicId: string): Promise<GetTopicResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  // TODO: Call actual gRPC service when available
  return { success: false, error: 'Topic not found' }
}

export interface UpdateTopicInput {
  topicId: string
  partitions?: number
  retentionMs?: number
  config?: Record<string, string>
  description?: string
}

export interface UpdateTopicResult {
  success: boolean
  topic?: KafkaTopic
  error?: string
}

/**
 * Update a Kafka topic
 */
export async function updateTopic(input: UpdateTopicInput): Promise<UpdateTopicResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  // TODO: Call actual gRPC service when available
  return { success: false, error: 'Not implemented' }
}

export interface DeleteTopicResult {
  success: boolean
  workflowId?: string
  error?: string
}

/**
 * Delete a Kafka topic
 */
export async function deleteTopic(topicId: string): Promise<DeleteTopicResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  // TODO: Call actual gRPC service when available
  const workflowId = `wf-delete-${Date.now()}`
  return { success: true, workflowId }
}

export interface ApproveTopicResult {
  success: boolean
  topic?: KafkaTopic
  workflowId?: string
  error?: string
}

/**
 * Approve a pending Kafka topic
 */
export async function approveTopic(topicId: string): Promise<ApproveTopicResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  // TODO: Call actual gRPC service when available
  return { success: false, error: 'Not implemented' }
}

// ============================================================================
// Schema Management Actions
// ============================================================================

export interface RegisterSchemaInput {
  topicId: string
  type: 'key' | 'value'
  format: 'avro' | 'protobuf' | 'json'
  content: string
  compatibility?: 'backward' | 'forward' | 'full' | 'none'
}

export interface RegisterSchemaResult {
  success: boolean
  schema?: KafkaSchema
  error?: string
}

/**
 * Register a new schema for a topic
 */
export async function registerSchema(input: RegisterSchemaInput): Promise<RegisterSchemaResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  // TODO: Call actual gRPC service when available
  return { success: false, error: 'Not implemented' }
}

export interface ListSchemasResult {
  success: boolean
  schemas?: KafkaSchema[]
  error?: string
}

/**
 * List schemas for a topic
 */
export async function listSchemas(topicId: string): Promise<ListSchemasResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  // TODO: Call actual gRPC service when available
  return { success: true, schemas: [] }
}

export interface GetSchemaResult {
  success: boolean
  schema?: KafkaSchema
  error?: string
}

/**
 * Get a schema by ID
 */
export async function getSchema(schemaId: string): Promise<GetSchemaResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  // TODO: Call actual gRPC service when available
  return { success: false, error: 'Schema not found' }
}

export interface CheckCompatibilityInput {
  topicId: string
  type: 'key' | 'value'
  format: 'avro' | 'protobuf' | 'json'
  content: string
}

export interface CheckCompatibilityResult {
  success: boolean
  compatible?: boolean
  error?: string
}

/**
 * Check if a schema is compatible with existing schemas
 */
export async function checkSchemaCompatibility(
  input: CheckCompatibilityInput
): Promise<CheckCompatibilityResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  // TODO: Call actual gRPC service when available
  return { success: true, compatible: true }
}

// ============================================================================
// Topic Sharing Actions
// ============================================================================

export interface RequestTopicAccessInput {
  topicId: string
  requestingWorkspaceId: string
  permission: 'read' | 'write' | 'read_write'
  justification: string
}

export interface RequestTopicAccessResult {
  success: boolean
  share?: KafkaTopicShare
  error?: string
}

/**
 * Request access to a topic from another workspace
 */
export async function requestTopicAccess(
  input: RequestTopicAccessInput
): Promise<RequestTopicAccessResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  const payload = await getPayload({ config })

  // Check workspace membership
  const membership = await payload.find({
    collection: 'workspace-members',
    where: {
      and: [
        { workspace: { equals: input.requestingWorkspaceId } },
        { user: { equals: session.user.id } },
        { status: { equals: 'active' } },
      ],
    },
    limit: 1,
  })

  if (membership.docs.length === 0) {
    return { success: false, error: 'Not a member of the requesting workspace' }
  }

  // TODO: Call actual gRPC service when available
  const mockShare: KafkaTopicShare = {
    id: `share-${Date.now()}`,
    topicId: input.topicId,
    sharedWithType: 'workspace',
    sharedWithWorkspaceId: input.requestingWorkspaceId,
    permission: input.permission,
    status: 'pending_request',
    requestedBy: session.user.id,
    requestedAt: new Date().toISOString(),
    justification: input.justification,
  }

  return { success: true, share: mockShare }
}

export interface ApproveTopicAccessInput {
  shareId: string
}

export interface ApproveTopicAccessResult {
  success: boolean
  share?: KafkaTopicShare
  error?: string
}

/**
 * Approve a topic access request
 */
export async function approveTopicAccess(
  input: ApproveTopicAccessInput
): Promise<ApproveTopicAccessResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  // TODO: Call actual gRPC service when available
  // Need to verify user is admin/owner of topic-owning workspace
  return { success: false, error: 'Not implemented' }
}

export interface RevokeTopicAccessResult {
  success: boolean
  error?: string
}

/**
 * Revoke topic access
 */
export async function revokeTopicAccess(shareId: string): Promise<RevokeTopicAccessResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  // TODO: Call actual gRPC service when available
  return { success: true }
}

export interface ListTopicSharesInput {
  topicId?: string
  workspaceId?: string
  status?: 'pending_request' | 'approved' | 'rejected' | 'revoked'
}

export interface ListTopicSharesResult {
  success: boolean
  shares?: KafkaTopicShare[]
  error?: string
}

/**
 * List topic shares
 */
export async function listTopicShares(
  input: ListTopicSharesInput
): Promise<ListTopicSharesResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  // TODO: Call actual gRPC service when available
  return { success: true, shares: [] }
}

// ============================================================================
// Discovery Actions
// ============================================================================

export interface DiscoverTopicsInput {
  requestingWorkspaceId: string
  environment?: string
  search?: string
  schemaFormat?: 'avro' | 'protobuf' | 'json'
  limit?: number
  offset?: number
}

export interface DiscoverTopicsResult {
  success: boolean
  topics?: DiscoverableTopic[]
  total?: number
  error?: string
}

/**
 * Discover topics that can be accessed by a workspace
 */
export async function discoverTopics(
  input: DiscoverTopicsInput
): Promise<DiscoverTopicsResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  const payload = await getPayload({ config })

  // Check workspace membership
  const membership = await payload.find({
    collection: 'workspace-members',
    where: {
      and: [
        { workspace: { equals: input.requestingWorkspaceId } },
        { user: { equals: session.user.id } },
        { status: { equals: 'active' } },
      ],
    },
    limit: 1,
  })

  if (membership.docs.length === 0) {
    return { success: false, error: 'Not a member of this workspace' }
  }

  // TODO: Call actual gRPC service when available
  return { success: true, topics: [], total: 0 }
}

// ============================================================================
// Metrics & Lineage Actions
// ============================================================================

export interface TopicMetrics {
  id: string
  topicId: string
  period: string
  periodType: string
  bytesIn: number
  bytesOut: number
  messageCountIn: number
  messageCountOut: number
  storageBytes: number
  partitionCount: number
}

export interface GetTopicMetricsInput {
  topicId: string
  periodType?: 'hour' | 'day' | 'week' | 'month'
  periods?: number
}

export interface GetTopicMetricsResult {
  success: boolean
  metrics?: TopicMetrics[]
  error?: string
}

/**
 * Get topic metrics
 */
export async function getTopicMetrics(
  input: GetTopicMetricsInput
): Promise<GetTopicMetricsResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  // TODO: Call actual gRPC service when available
  return { success: true, metrics: [] }
}

export interface LineageNode {
  workspaceId: string
  workspaceName: string
  serviceAccountId: string
  serviceAccountName: string
  clientId: string
  bytesTransferred: number
  lastSeen: string
}

export interface GetTopicLineageResult {
  success: boolean
  producers?: LineageNode[]
  consumers?: LineageNode[]
  error?: string
}

/**
 * Get topic lineage (producers and consumers)
 */
export async function getTopicLineage(topicId: string): Promise<GetTopicLineageResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  // TODO: Call actual gRPC service when available
  return { success: true, producers: [], consumers: [] }
}

// ============================================================================
// Service Account Actions
// ============================================================================

export interface CreateServiceAccountInput {
  workspaceId: string
  name: string
  type: 'producer' | 'consumer' | 'producer_consumer' | 'admin'
}

export interface ServiceAccount {
  id: string
  workspaceId: string
  name: string
  type: 'producer' | 'consumer' | 'producer_consumer' | 'admin'
  status: string
  createdBy: string
  createdAt: string
}

export interface CreateServiceAccountResult {
  success: boolean
  serviceAccount?: ServiceAccount
  apiKey?: string
  apiSecret?: string
  error?: string
}

/**
 * Create a service account for Kafka access
 */
export async function createServiceAccount(
  input: CreateServiceAccountInput
): Promise<CreateServiceAccountResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  const payload = await getPayload({ config })

  // Check workspace membership with admin/owner role
  const membership = await payload.find({
    collection: 'workspace-members',
    where: {
      and: [
        { workspace: { equals: input.workspaceId } },
        { user: { equals: session.user.id } },
        { role: { in: ['owner', 'admin'] } },
        { status: { equals: 'active' } },
      ],
    },
    limit: 1,
  })

  if (membership.docs.length === 0) {
    return {
      success: false,
      error: 'Permission denied. You must be an admin or owner of this workspace.',
    }
  }

  // TODO: Call actual gRPC service when available
  return { success: false, error: 'Not implemented' }
}

export interface ListServiceAccountsResult {
  success: boolean
  serviceAccounts?: ServiceAccount[]
  error?: string
}

/**
 * List service accounts for a workspace
 */
export async function listServiceAccounts(
  workspaceId: string
): Promise<ListServiceAccountsResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  const payload = await getPayload({ config })

  // Check workspace membership
  const membership = await payload.find({
    collection: 'workspace-members',
    where: {
      and: [
        { workspace: { equals: workspaceId } },
        { user: { equals: session.user.id } },
        { status: { equals: 'active' } },
      ],
    },
    limit: 1,
  })

  if (membership.docs.length === 0) {
    return { success: false, error: 'Not a member of this workspace' }
  }

  // TODO: Call actual gRPC service when available
  return { success: true, serviceAccounts: [] }
}

export interface RevokeServiceAccountResult {
  success: boolean
  error?: string
}

/**
 * Revoke a service account
 */
export async function revokeServiceAccount(
  serviceAccountId: string
): Promise<RevokeServiceAccountResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  // TODO: Call actual gRPC service when available
  return { success: true }
}

// ============================================================================
// Admin Actions (Cluster & Provider Management)
// ============================================================================

export interface KafkaProvider {
  id: string
  name: string
  displayName: string
  adapterType: string
  requiredConfigFields: string[]
  capabilities: {
    schemaRegistry: boolean
    transactions: boolean
    quotasApi: boolean
    metricsApi: boolean
  }
  documentationUrl: string
  iconUrl: string
}

export interface ListProvidersResult {
  success: boolean
  providers?: KafkaProvider[]
  error?: string
}

/**
 * List available Kafka providers (admin only)
 */
export async function listProviders(): Promise<ListProvidersResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  // TODO: Call actual gRPC service when available
  // This would list providers like Confluent Cloud, AWS MSK, etc.
  return { success: true, providers: [] }
}

export interface KafkaCluster {
  id: string
  name: string
  providerId: string
  connectionConfig: Record<string, string>
  validationStatus: 'pending' | 'valid' | 'invalid'
  lastValidatedAt?: string
  createdAt: string
  updatedAt: string
}

export interface RegisterClusterInput {
  name: string
  providerId: string
  connectionConfig: Record<string, string>
  credentials: Record<string, string>
}

export interface RegisterClusterResult {
  success: boolean
  cluster?: KafkaCluster
  error?: string
}

/**
 * Register a Kafka cluster (platform admin only)
 */
export async function registerCluster(
  input: RegisterClusterInput
): Promise<RegisterClusterResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  // TODO: Verify platform admin role
  // TODO: Call actual gRPC service when available
  return { success: false, error: 'Not implemented' }
}

export interface ListClustersResult {
  success: boolean
  clusters?: KafkaCluster[]
  error?: string
}

/**
 * List Kafka clusters (platform admin only)
 */
export async function listClusters(): Promise<ListClustersResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  // TODO: Verify platform admin role
  // TODO: Call actual gRPC service when available
  return { success: true, clusters: [] }
}

export interface ValidateClusterResult {
  success: boolean
  valid?: boolean
  error?: string
}

/**
 * Validate a Kafka cluster connection (platform admin only)
 */
export async function validateCluster(clusterId: string): Promise<ValidateClusterResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  // TODO: Verify platform admin role
  // TODO: Call actual gRPC service when available
  return { success: false, error: 'Not implemented' }
}

export interface DeleteClusterResult {
  success: boolean
  error?: string
}

/**
 * Delete a Kafka cluster (platform admin only)
 */
export async function deleteCluster(clusterId: string): Promise<DeleteClusterResult> {
  const session = await auth.api.getSession({
    headers: await headers(),
  })

  if (!session?.user) {
    return { success: false, error: 'Not authenticated' }
  }

  // TODO: Verify platform admin role
  // TODO: Call actual gRPC service when available
  return { success: false, error: 'Not implemented' }
}
